# csciga2572-deep-learning

./: .gitignore
hw1/: act_fn_derivative_plots.py  gd.py  mlp.py  pyproject.toml
hw2/: 08-seq_classification.ipynb  hw2_rnn.ipynb  pyproject.toml
hw2/res/: plot_lib.py
hw3/: hw3_impl.ipynb  pyproject.toml
hw4/: hw4_impl.ipynb  pyproject.toml
